(BLEEDING) Second Phase of RTL Fixes

--- a/interface/themes/patientportal-register.scss
+++ b/interface/themes/patientportal-register.scss
@@ -39,12 +39,18 @@ body {
     }
 }
 
-.stepwiz-step p {
-    margin-top: 10px;
-}
-
 .stepwiz-row {
     display: table-row;
+	&:before {
+	    top: 14px;
+	    bottom: 0;
+	    position: absolute;
+	    content: " ";
+	    width: 100%;
+	    height: 1px;
+	    background-color: #ccc;
+	    z-order: 0;
+	}
 }
 
 .stepwiz {
@@ -54,26 +60,17 @@ body {
     margin-top: 20px;
 }
 
-.stepwiz-step button[disabled] {
-    opacity: 1 !important;
-    filter: alpha(opacity=100) !important;
-}
-
-.stepwiz-row:before {
-    top: 14px;
-    bottom: 0;
-    position: absolute;
-    content: " ";
-    width: 100%;
-    height: 1px;
-    background-color: #ccc;
-    z-order: 0;
-}
-
 .stepwiz-step {
     display: table-cell;
     text-align: center;
     position: relative;
+	p {
+	    margin-top: 10px;
+	}
+	button[disabled] {
+	    opacity: 1 !important;
+	    filter: alpha(opacity=100) !important;
+	}
 }
 
 .btn-circle {
